tests/pos-special/macros-in-same-project-1/Bar.scala
object Bar {
  Foo.myMacro() // error
}
